textboxes coming along, but the timeline is

--- a/index.html
+++ b/index.html
@@ -2,24 +2,32 @@
 <html>
   <head>
     <title>Yo dawg, this is a vertical timeline!</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="assets/css/MeyerCSSReset.css">
     <link rel="stylesheet" href="assets/css/index.css">
   </head>
   <body>
     <!--this <section> is one wordbubble/datetime line complex-->
     <section>
-      <article>here goes the boxes
+      <article>
+        <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
+        <div class ="boxtitle">This is the title</div>
+        here goes the boxes. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
       </article>
       <aside>here goes the time and line
-        <div class="line">&nbsp;</div>
+      <!--<div class="line">&nbsp;</div>-->
       </aside>
     </section>
     <!--datebubble end-->
     <section>
-      <article>FUCK YOUR BOXES BRO why you gotta be sucha bitch do you even code bro? ceom at me with mad skillz and shit. ill end you and your little dog too.
+      <article>
+        <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
+        <div class ="boxtitle">This is the title</div>
+        FUCK YOUR BOXES BRO why you gotta be sucha bitch do you even code bro? ceom at me with mad skillz and shit. ill end you and your little dog too. your turtle has a bigger dick than you do. i need to make an 'angry bro lipsom'. that would be hilarious.FUCK YOUR BOXES BRO why you gotta be sucha bitch do you even code bro? ceom at me with mad skillz and shit. ill end you and your little dog too. your turtle has a bigger dick than you do. i need to make an 'angry bro lipsom'. that would be hilarious.
       </article>
       <aside>so. fucking. rude.
-        <div class="line">&nbsp;</div>
+        <!--<div class="line">&nbsp;</div>-->
+        <br class="clear" />
       </aside>
     </section>
   </body>
