the site... is kind of looking like it's supposed to. i never thought it was going to work.

--- a/index.html
+++ b/index.html
@@ -7,28 +7,30 @@
     <link rel="stylesheet" href="assets/css/index.css">
   </head>
   <body>
+    <div class="line">&nbsp;</div>
     <!--this <section> is one wordbubble/datetime line complex-->
     <section>
-      <article>
-        <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
-        <div class ="boxtitle">This is the title</div>
-        here goes the boxes. blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah
-      </article>
-      <aside>here goes the time and line
+      <aside>02/18/1986<br><div class= "time">10:00 am</div>
       <!--<div class="line">&nbsp;</div>-->
       </aside>
+      <article>
+        <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
+        <div class ="boxtitle">Disrupt Genuine Affagatos</div>
+        Affogato ennui kombucha kinfolk tote bag ramps hammock. IPhone green juice disrupt authentic. Bicycle rights taxidermy crucifix bitters craft beer church-key.
+      </article>
+
     </section>
     <!--datebubble end-->
     <section>
+      <aside>02/22/2016<br><div class= "time">12:00 pm</div>
+        <!---->
+      </aside>
       <article>
         <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
-        <div class ="boxtitle">This is the title</div>
-        FUCK YOUR BOXES BRO why you gotta be sucha bitch do you even code bro? ceom at me with mad skillz and shit. ill end you and your little dog too. your turtle has a bigger dick than you do. i need to make an 'angry bro lipsom'. that would be hilarious.FUCK YOUR BOXES BRO why you gotta be sucha bitch do you even code bro? ceom at me with mad skillz and shit. ill end you and your little dog too. your turtle has a bigger dick than you do. i need to make an 'angry bro lipsom'. that would be hilarious.
+        <div class ="boxtitle">The world of genuine bahn-mi Sandwhiches</div>
+        Post-ironic 8-bit banh mi tilde, synth locavore put a bird on it fingerstache bespoke meh raw denim occupy deep v twee. Pinterest ethical intelligentsia, lomo next level marfa fixie fap photo booth plaid ennui. Blue bottle skateboard gastropub pinterest, man braid yuccie fashion axe humblebrag biodiesel post-ironic deep v sustainable vinyl. Pickled austin whatever artisan disrupt crucifix. Schlitz distillery hella, mixtape fashion axe gochujang brunch tattooed. Paleo wayfarers before they sold out cray, hella locavore ramps lumbersexual hashtag ethical. Hashtag tofu knausgaard venmo ethical 8-bit.
       </article>
-      <aside>so. fucking. rude.
-        <!--<div class="line">&nbsp;</div>-->
-        <br class="clear" />
-      </aside>
+
     </section>
   </body>
 </html>
