started on the icons

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
     </section>
     <!--datebubble end-->
     <section>
+      <div class="circle1"><i class="fa fa-mobile fa-3x"></i></div>
       <aside>02/22/2016<br><div class= "time">12:00 pm</div>
-        <!---->
       </aside>
       <article>
         <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
