--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
   </head>
   <body>
     <div class="line">&nbsp;</div>
-    <!--this <section> is one wordbubble/datetime line complex-->
+   
+
+ <!--this <section> is one wordbubble/datetime line complex-->
     <section>
+ <div class="circle2">&nbsp;</div><div class="circle1">&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile fa-3x"></i>
+</div>
       <aside>02/18/1986<br><div class= "time">10:00 am</div>
       <!--<div class="line">&nbsp;</div>-->
       </aside>
@@ -21,9 +25,11 @@
 
     </section>
     <!--datebubble end-->
-    <section>
-      <div class="circle1"><i class="fa fa-mobile fa-3x"></i></div>
-      <aside>02/22/2016<br><div class= "time">12:00 pm</div>
+    
+
+<section>
+   <div class="circle2">&nbsp;</div><div class="circle1">&nbsp;&nbsp;&nbsp;<i class="fa fa-mobile fa-3x"></i></div>
+         <aside>02/22/2016<br><div class= "time">12:00 pm</div>
       </aside>
       <article>
         <div class="caret"><i class="fa fa-caret-left fa-4x"></i></div>
